--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Joefrey &amp; Sheila</h1>
-							<h2>We Are Getting Married</h2>
+							<h1>Kája &amp; Jirka</h1>
+							<h2>Budeme se brát</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
@@ -617,6 +617,7 @@
         day: d.getDate(),
         enableUtc: false,
     });
+
 </script>
 
 	</body>
