--- a/index.html
+++ b/index.html
@@ -486,8 +486,7 @@
 
 				<div class="col-md-6 animate-box">
 					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
+						<iframe style="border:none" src="https://frame.mapy.cz/s/nefozemofa" width="100%" height="100%" frameborder="0"></iframe>
 					</div>
 				</div>
 			</div>
