--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		</div>
 	</header>
 
-	<div id="fh5co-couple">
+	<div id="fh5co-couple" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
