--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Ahoj!</h2>
-					<h3>1. červenec 2023, Němčice</h3>
-					<p>Zveme Vás na naší svatbu</p>
+					<h3>1. července 2023</h3>
+					<p>Vás zveme na naší svatbu do Penzionu Na Nebesích.</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -146,8 +146,8 @@
 							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date">December 25, 2015</span>
+									<h3 class="timeline-title">Příjezd hostů a malé občerstvení</h3>
+									<span class="date">12:00</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -158,8 +158,8 @@
 							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First Date</h3>
-									<span class="date">December 28, 2015</span>
+									<h3 class="timeline-title">Obřad</h3>
+									<span class="date">13:00</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -170,8 +170,68 @@
 							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">In A Relationship</h3>
-									<span class="date">January 1, 2016</span>
+									<h3 class="timeline-title">Společné focení</h3>
+									<span class="date">14:00</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Raut</h3>
+									<span class="date">15:00</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Krájení dortu</h3>
+									<span class="date">16:00</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Novomanželský tanec</h3>
+									<span class="date">18:00</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Hry a zahájení zábavy</h3>
+									<span class="date">19:00</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Zapalování prskavek</h3>
+									<span class="date">21:00</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -248,7 +308,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Parkování</h3>
-							<p>Zaparkovat můžete na <a href="https://mapy.cz/s/hocosubako">travnaté ploše</a> u zastávky, naproti penzionu.</p>
+							<p>Zaparkovat můžete u penzionu (8 míst), nebo naproti na <a href="https://mapy.cz/s/hocosubako">travnaté ploše</a> u bývalé zastávky (20 míst).</p>
 						</div>
 					</div>
 
@@ -275,6 +335,19 @@
 		</div>
 	</div>
 
+	<div class="fh5co-section-gray fh5co-section">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Informace</h2>
+					<p>Děti i partneří vítáni.</p>
+					<p>Odvoz zajištěn.</p>
+					<p>Jste zváni na obřad i raut.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
@@ -282,7 +355,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Dorazíte?</h2>
-					<p>Potvrďte prosím účast do 1. června na <a href="tel:+420725734075">725 734 075</a>. Děkujeme.</p>
+					<p>Potvrďte prosím účast a počet hostů do 1. června na <a href="tel:+420725734075">725 734 075</a>. Děkujeme.</p>
 				</div>
 			</div>
 		</div>
