--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Parkování</h3>
-							<p>Zaparkovat můžete u penzionu (8 míst), nebo naproti na <a href="https://mapy.cz/s/hocosubako">travnaté ploše</a> u bývalé zastávky (20 míst).</p>
+							<p>Zaparkovat můžete u penzionu (8 míst) nebo naproti na <a href="https://mapy.cz/s/hocosubako">travnaté ploše</a> (20 míst).</p>
 						</div>
 					</div>
 
@@ -355,7 +355,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Dorazíte?</h2>
-					<p>Potvrďte prosím účast a počet hostů do 1. června na <a href="tel:+420725734075">725 734 075</a>. Děkujeme.</p>
+					<p>Potvrďte prosím účast a počet hostů do 1. června na <a href="tel:+420725734075">725 734 075</a>.</p>
+					<p>Děkujeme.</p>
 				</div>
 			</div>
 		</div>
