--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
+
 	</head>
 	<body>
 		
@@ -294,7 +296,7 @@
 				<div class="col-md-6">
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-calendar"></i>
+							<i class="fa fa-map-marker"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>Místo</h3>
@@ -304,7 +306,7 @@
 
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-image"></i>
+							<i class="fa fa-car"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>Parkování</h3>
