--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 							<i class="fa fa-map-marker"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Místo</h3>
+							<h3>Adresa</h3>
 							<p>Penzion Na Nebesích, Němčice 46.</p>
 						</div>
 					</div>
