--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</div>
 	</header>
 
-	<div id="fh5co-couple" class="fh5co-section-gray">
+	<div id="section-hello" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -107,7 +107,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-couple-story">
+	<div id="section-schedule">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -220,7 +220,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-gallery" class="fh5co-section-gray">
+	<div id="section-dress-code" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -230,7 +230,7 @@
 			</div>
 			<div class="row row-bottom-padded-md">
 				<div class="col-md-12">
-					<ul id="fh5co-gallery-list">
+					<ul id="section-dress-code-list">
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
 							<a href="images/gallery-1.jpg">
 								<div class="case-studies-summary">
@@ -257,7 +257,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-services">
+	<div id="section-place">
 		<div class="container">
 			
 			<div class="row animate-box">
@@ -311,7 +311,7 @@
 		</div>
 	</div>
 
-	<div class="fh5co-section-gray fh5co-section">
+	<div id="section-info" class="fh5co-section-gray fh5co-section">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
@@ -325,7 +325,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
+	<div id="section-contact" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
