--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
 				<div class="col-xs-2">
 					<div id="fh5co-logo"><a href="index.html">Svatba<strong>.</strong></a></div>
 				</div>
+				<div class="col-xs-10 text-right menu-1">
+					<ul>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="#section-hello">Ahoj!</a></li>
+						<li><a href="#section-schedule">Harmonogram</a></li>
+						<li><a href="#section-dress-code">Dress code</a></li>
+						<li><a href="#section-place">Místo</a></li>
+						<li><a href="#section-info">Informace</a></li>
+						<li><a href="#section-contact">Dorazíte?</a></li>
+					</ul>
+				</div>
 			</div>
 			
 		</div>
