--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
+						<li class="active"><a href="index.html">Domů</a></li>
 						<li><a href="#section-hello">Ahoj!</a></li>
 						<li><a href="#section-schedule">Harmonogram</a></li>
 						<li><a href="#section-dress-code">Dress code</a></li>
