--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
@@ -74,7 +72,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+						<div class="display-tc" data-animate-effect="fadeIn">
 							<h1>Kája &amp; Jirka</h1>
 							<h2>Budeme se brát</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
@@ -88,13 +86,13 @@
 	<div id="section-hello" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Ahoj!</h2>
 					<h3>1. července 2023</h3>
 					<p>Vás zveme na naší svatbu do Penzionu Na Nebesích.</p>
 				</div>
 			</div>
-			<div class="couple-wrap animate-box">
+			<div class="couple-wrap">
 				<div class="couple-half">
 					<div class="groom">
 						<img src="images/groom.jpg" alt="groom" class="img-responsive">
@@ -121,15 +119,15 @@
 	<div id="section-schedule">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Harmonogram</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
-					<ul class="timeline animate-box">
-						<li class="animate-box">
+					<ul class="timeline">
+						<li>
 							<div class="timeline-badge" style="background-image:url(images/welcome_drink.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -141,7 +139,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="timeline-inverted">
 							<div class="timeline-badge" style="background-image:url(images/wedding_ceremony.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -153,7 +151,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box">
+						<li>
 							<div class="timeline-badge" style="background-image:url(images/photo.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -165,7 +163,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="timeline-inverted">
 							<div class="timeline-badge" style="background-image:url(images/banquet.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -177,7 +175,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box">
+						<li>
 							<div class="timeline-badge" style="background-image:url(images/cake.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -189,7 +187,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="timeline-inverted">
 							<div class="timeline-badge" style="background-image:url(images/dance.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -201,7 +199,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box">
+						<li>
 							<div class="timeline-badge" style="background-image:url(images/games.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -213,7 +211,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="timeline-inverted">
 							<div class="timeline-badge" style="background-image:url(images/sparklers.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -234,7 +232,7 @@
 	<div id="section-dress-code" class="fh5co-section-gray">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Dress code</h2>
 					<p>Svatba bude ve stylu smart casual, takže sako nech klidně doma.</p>
 				</div>
@@ -242,13 +240,13 @@
 			<div class="row row-bottom-padded-md">
 				<div class="col-md-12">
 					<ul id="section-dress-code-list">
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
 							<a href="images/gallery-1.jpg">
 								<div class="case-studies-summary">
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 							<a href="#" class="color-2">
 								<div class="case-studies-summary">
 								</div>
@@ -256,7 +254,7 @@
 						</li>
 
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
 								</div>
@@ -270,8 +268,8 @@
 
 	<div id="section-place">
 		<div class="container">
-			
-			<div class="row animate-box">
+
+			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Místo</h2>
 				</div>
@@ -279,7 +277,7 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+					<div class="feature-left" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="fa fa-map-marker"></i>
 						</span>
@@ -289,7 +287,7 @@
 						</div>
 					</div>
 
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+					<div class="feature-left" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="fa fa-car"></i>
 						</span>
@@ -299,7 +297,7 @@
 						</div>
 					</div>
 
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+					<div class="feature-left" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="icon-video"></i>
 						</span>
@@ -311,21 +309,21 @@
 
 				</div>
 
-				<div class="col-md-6 animate-box">
+				<div class="col-md-6">
 					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
 						<iframe style="border:none" src="https://frame.mapy.cz/s/nefozemofa" width="100%" height="100%" frameborder="0"></iframe>
 					</div>
 				</div>
 			</div>
 
-			
+
 		</div>
 	</div>
 
 	<div id="section-info" class="fh5co-section-gray fh5co-section">
 		<div class="overlay"></div>
 		<div class="container">
-			<div class="row animate-box">
+			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Informace</h2>
 					<p>Děti i partneří vítáni.</p>
@@ -339,7 +337,7 @@
 	<div id="section-contact" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
-			<div class="row animate-box">
+			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Dorazíte?</h2>
 					<p>Potvrďte prosím účast a počet hostů do 1. června na <a href="tel:+420725734075">725 734 075</a>.</p>
