Odkaz na nove strance

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Parkování</h3>
-							<p>Zaparkovat můžete u penzionu (8 míst) nebo naproti na <a href="https://mapy.cz/s/hocosubako">travnaté ploše</a> (20 míst).</p>
+							<p>Zaparkovat můžete u penzionu (8 míst) nebo naproti na <a href="https://mapy.cz/s/hocosubako" target="_blank">travnaté ploše</a> (20 míst).</p>
 						</div>
 					</div>
 
