--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
@@ -88,7 +88,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Ahoj!</h2>
 					<h3>1. července 2023</h3>
-					<p>Vás zveme na naší svatbu do Penzionu Na Nebesích.</p>
+					<p>Vás srdečně zveme na naší svatbu do Penzionu Na Nebesích.</p>
 				</div>
 			</div>
 			<div class="couple-wrap">
@@ -120,7 +120,6 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Harmonogram</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -150,6 +149,7 @@
 								<div class="timeline-heading">
 									<span class="date">14:00</span>
 									<h3 class="timeline-title">Společné focení</h3>
+								</div>
 							</div>
 						</li>
 						<li class="timeline-inverted">
@@ -157,7 +157,8 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<span class="date">15:00</span>
-									<h3 class="timeline-title">Raut</h3>
+									<h3 class="timeline-title">Raut a odvoz aut</h3>
+								</div>
 							</div>
 						</li>
 						<li>
@@ -272,11 +273,15 @@
 
 					<div class="feature-left" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-video"></i>
+							<i class="fa fa-hotel"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Video Editing</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+							<h3>Nocleh</h3>
+							<p>
+								Po domluvě je možné přespat v posteli ve společném pokoji, případně na zemi, pokud by se všechny postele obsadily.
+								<br/>
+								Případně není problém si na zahradě postavit stan a přespat v něm.
+							</p>
 						</div>
 					</div>
 
@@ -299,9 +304,11 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Informace</h2>
-					<p>Děti i partneří vítáni.</p>
+					<p>Partneří vítáni.</p>
+					<p>Děti také (venkovní i vnitřní dětský koutek, pískoviště, trampolína a zvířátka).</p>
 					<p>Odvoz zajištěn.</p>
-					<p>Jste zváni na obřad i raut.</p>
+					<p>Jste zváni na obřad i raut (vše proběhne na jednom místě).</p>
+					<p>Možnost přespání (pár postelí je zatím volných, dále je možnost spát na zemi nebo ve vlastním stanu).</p>
 				</div>
 			</div>
 		</div>
@@ -314,6 +321,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Dorazíte?</h2>
 					<p>Potvrďte prosím účast a počet hostů do 1. června na <a href="tel:+420725734075">725 734 075</a>.</p>
+					<p>Pokud byste chtěli přespat v posteli, dejte vědět co nejdříve 🙂</p>
 					<p>Děkujeme.</p>
 				</div>
 			</div>
@@ -349,18 +357,15 @@
 	<script src="js/main.js"></script>
 
 	<script>
-    const d = new Date(2023, 6, 1);
+	const d = new Date(2023, 6, 1);
 
-    simplyCountdown('.simply-countdown-one', {
-        year: d.getFullYear(),
-        month: d.getMonth(),
-        day: d.getDate(),
-        enableUtc: false,
-        plural: true,
-    });
-
-</script>
-
+	simplyCountdown('.simply-countdown-one', {
+		year: d.getFullYear(),
+		month: d.getMonth(),
+		day: d.getDate(),
+		enableUtc: false,
+		plural: true,
+	});
+	</script>
 	</body>
 </html>
-
