--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 							<div class="timeline-badge" style="background-image:url(images/games.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<span class="date">19:00</span>
+									<span class="date">18:30</span>
 									<h3 class="timeline-title">Hry a zahájení zábavy</h3>
 								</div>
 							</div>
@@ -278,7 +278,7 @@
 						<div class="feature-copy">
 							<h3>Nocleh</h3>
 							<p>
-								Po domluvě je možné přespat v posteli ve společném pokoji, případně na zemi, pokud by se všechny postele obsadily.
+								Po domluvě je možné přespat ve společném pokoji v posteli, nebo ve spacáku na zemi, pokud by se obsadily všechny postele.
 								<br/>
 								Případně není problém si na zahradě postavit stan a přespat v něm.
 							</p>
