Dress code fotky

--- a/index.html
+++ b/index.html
@@ -214,22 +214,14 @@
 			<div class="row row-bottom-padded-md">
 				<div class="col-md-12">
 					<ul id="section-dress-code-list">
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
-							<a href="images/gallery-1.jpg">
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/pan.png); background-position: 50% 25%;">
+							<a href="images/pan.png">
 								<div class="case-studies-summary">
 								</div>
 							</a>
 						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-							<a href="#" class="color-2">
-								<div class="case-studies-summary">
-								</div>
-							</a>
-						</li>
-
-
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-							<a href="#" class="color-3">
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/panicky.png);  background-position: 50% 25%;">
+							<a href="images/panicky.png">
 								<div class="case-studies-summary">
 								</div>
 							</a>
