--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
 		$('body').removeClass('offcanvas');
 		$('.js-fh5co-nav-toggle').removeClass('active');
 	}
+
+	console.log("Doufam, ze prijdes 🙂");
 	</script>
 	</body>
 </html>
