--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Ahoj!</h2>
 					<h3>1. července 2023</h3>
-					<p>Vás srdečně zveme na naší svatbu do Penzionu Na Nebesích.</p>
+					<p>Vás srdečně zveme na naši svatbu do Penzionu Na Nebesích.</p>
 				</div>
 			</div>
 		</div>
@@ -292,7 +292,8 @@
 					<h2>Dorazíte?</h2>
 					<p>Potvrďte prosím účast a počet hostů do 1. června na <a href="tel:+420725734075">725 734 075</a>.</p>
 					<p>Pokud byste chtěli přespat v posteli, dejte vědět co nejdříve 🙂</p>
-					<p>Děkujeme.</p>
+					<p>Děkujeme a těšíme se.</p>
+					<p>Kája s Jirkou</p>
 				</div>
 			</div>
 		</div>
