--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc" data-animate-effect="fadeIn">
-							<h1>Kája &amp; Jirka</h1>
+							<h1>Karolína Matušková</h1>
+							<h1>&amp;</h1>
+							<h1>Jiří Syrový</h1>
 							<h2>Budeme se brát</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 						</div>
