--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     <h2>Ahoj!</h2>
                     <h3>1. července 2023</h3>
                     <p>Vás srdečně zveme na naši svatbu do Penzionu Na Nebesích.</p>
+                    <br/>
+                    <h3 class="names names-desktop">Karolína Matušková a Jiří Syrový</h3>
+                    <h3 class="names names-mobile">Karolína Matušková<br/>a<br/>Jiří Syrový</h3>
                 </div>
             </div>
         </div>
