--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <span class="date">15:00</span>
-                                    <h3 class="timeline-title">Raut a odvoz aut</h3>
+                                    <h3 class="timeline-title">Raut</h3>
                                 </div>
                             </div>
                         </li>
