--- a/index.html
+++ b/index.html
@@ -251,8 +251,10 @@
 						</span>
                         <div class="feature-copy">
                             <h3>Parkování</h3>
-                            <p>Zaparkovat můžete u penzionu (8 míst) nebo naproti na <a
-                                    href="https://mapy.cz/s/hocosubako" target="_blank">travnaté ploše</a> (20 míst).
+                            <p>
+                                Zaparkujte přímo u penzionu, ostatní místa jsou bohužel kvůli stavbě nedostupná.
+                                <br/>
+                                Pokud by místa došla, dejte vedět a navedeme vás.
                             </p>
                         </div>
                     </div>
